--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>My Dashboard</h1>
     <div id="dashboard">
-        <img src="Soil_Temperature.png" alt="Dashboard Image" id="dashboard-image">
+        <img src="SoilReading.jpg" alt="Dashboard Image" id="dashboard-image">
         <!-- Your dashboard content will go here -->
     </div>
     <script src="script.js"></script>
